[gd_scene format=4 uid="uid://squ0icbxuucn"]

[ext_resource type="Script" uid="uid://bjqs77k82ttvw" path="res://global/menu.gd" id="1_a2o52"]
[ext_resource type="Shader" uid="uid://bwq0wdlq4pyb8" path="res://levels/main_level/view_shader2.gdshader" id="1_pajvo"]
[ext_resource type="Texture2D" uid="uid://c8rmeb4kq251m" path="res://levels/main_level/room_door.png" id="2_vjoqv"]
[ext_resource type="AudioStream" uid="uid://dgb7l81hjngu5" path="res://levels/main_level/sound/pismo_open.wav" id="3_a2o52"]
[ext_resource type="PackedScene" uid="uid://dubqwnaihbvqf" path="res://interactable/own_deal.tscn" id="4_vjoqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tcsuo"]
shader = ExtResource("1_pajvo")
shader_parameter/dithering = true
shader_parameter/dithering_size = 16
shader_parameter/resolution_scale = 2
shader_parameter/threshold = 60.0
shader_parameter/white = Color(1, 1, 1, 1)
shader_parameter/black = Color(0, 0, 0, 1)

[sub_resource type="Environment" id="Environment_gxod3"]
background_mode = 1
ambient_light_source = 1
reflected_light_source = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vpgq1"]
resource_name = "hall"
cull_mode = 2
albedo_texture = ExtResource("2_vjoqv")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_k2m1w"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"name": "hall",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_wrdcu"]
resource_name = "room_Cube_014"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("AACqn1VV/94AAP/eVVWqnwAAVGBVVaqfAACqn1VVVGAy2YhSYP4hbjLZIW5g/ohSVVVUYKqqqp9VVaqfqqpUYFVV/yAAAFRgAAD/IFVVVGCh/es0SdtpTknb6zSh/WlO"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_vpgq1"),
"name": "hall",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP////8AAP//AAD//wAA////////AAAAAAAA//8AAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAP//////////////////AAD/////AAD///////8AAP////8AAP//////////////////AAAAAP////8AAAAAAAD/////AAD///////8AAAAA//8AAAAA//////////8AAP+/AAD//////78AAP//AAD/v/////////+//z//f/8//3//P/9//z//f////3////9/////f////3//v/9//7//f/+//3//v/9//3//f/9//3//f/9//3//f/9//z//f/8//3//P/9//z////9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_k2m1w")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ihfuj"]

[sub_resource type="ArrayMesh" id="ArrayMesh_wxj22"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6jjtv"]
resource_name = "room_Cube_015"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_ihfuj"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_wxj22")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rd3l0"]

[sub_resource type="ArrayMesh" id="ArrayMesh_toa7g"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ayx67"]
resource_name = "room_Cube_016"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_rd3l0"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_toa7g")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d5oxa"]

[sub_resource type="ArrayMesh" id="ArrayMesh_sygao"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6vr6m"]
resource_name = "room_Cube_017"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_d5oxa"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_sygao")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yvsof"]

[sub_resource type="ArrayMesh" id="ArrayMesh_nrdio"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_3d7a8"]
resource_name = "room_Cube_018"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_yvsof"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_nrdio")

[sub_resource type="CanvasTexture" id="CanvasTexture_a2o52"]

[node name="menu" type="Control" unique_id=1923214902 node_paths=PackedStringArray("deal1", "deal2", "deal3", "deal4")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2o52")
deal1 = NodePath("convert/belt/own_deal")
deal2 = NodePath("convert/belt/own_deal2")
deal3 = NodePath("convert/belt/own_deal3")
deal4 = NodePath("convert/belt/own_deal4")

[node name="SubViewportContainer" type="SubViewportContainer" parent="." unique_id=1638603696]
material = SubResource("ShaderMaterial_tcsuo")
layout_mode = 0
offset_right = 1440.0
offset_bottom = 960.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer" unique_id=1025072647]
handle_input_locally = false
audio_listener_enable_3d = true
size = Vector2i(1440, 960)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport" unique_id=389498620]
environment = SubResource("Environment_gxod3")

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport" unique_id=925461768]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 1.349855, 3.5145297, 0)
shadow_enabled = true
spot_range = 71.345406

[node name="Cube_002" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=1235280383]
transform = Transform3D(0.6399505, 0, 0, 0, 0.05127111, 0, 0, 0, 1.238929, 2.16792, 1.2646675, -0.18355697)
mesh = SubResource("ArrayMesh_wrdcu")

[node name="Cube_003" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=1944797235]
transform = Transform3D(3.0127156, 0, 0, 0, 0.05127111, 0, 0, 0, 2.8504736, 2.16792, 0.21060789, -0.18355697)
mesh = SubResource("ArrayMesh_wrdcu")

[node name="Cube_004" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=1861588095]
transform = Transform3D(0.3817726, 0, 0, 0, 2.285303, 0, 0, 0, 2.8504736, 3.8936725, 0.21060789, -0.18355697)
mesh = SubResource("ArrayMesh_wrdcu")

[node name="Cube_005" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=1545982236]
transform = Transform3D(-1.668781e-08, 0, -2.8504736, 0, 2.285303, 0, 0.3817726, 0, -1.2459816e-07, 2.254291, 0.21060789, 2.0258825)
mesh = SubResource("ArrayMesh_wrdcu")

[node name="Cube_006" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=691107533]
transform = Transform3D(-1.668781e-08, 0, -2.8504736, 0, 2.285303, 0, 0.3817726, 0, -1.2459816e-07, 2.254291, 0.21060789, -1.9052992)
mesh = SubResource("ArrayMesh_wrdcu")

[node name="Cube_008" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=219104464]
transform = Transform3D(0.061857264, 0, 0, 0, 0.50831676, 0, 0, 0, 0.061857264, 2.611348, 0.773303, 0.8794842)
mesh = SubResource("ArrayMesh_6jjtv")

[node name="Cube_009" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=1624101834]
transform = Transform3D(0.061857264, 0, 0, 0, 0.50831676, 0, 0, 0, 0.061857264, 2.611348, 0.773303, -1.240448)
mesh = SubResource("ArrayMesh_ayx67")

[node name="Cube_010" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=670188688]
transform = Transform3D(0.061857264, 0, 0, 0, 0.50831676, 0, 0, 0, 0.061857264, 1.6058455, 0.773303, -1.240448)
mesh = SubResource("ArrayMesh_6vr6m")

[node name="Cube_011" type="MeshInstance3D" parent="SubViewportContainer/SubViewport" unique_id=1643841899]
transform = Transform3D(0.061857264, 0, 0, 0, 0.50831676, 0, 0, 0, 0.061857264, 1.6058455, 0.773303, 0.8794842)
mesh = SubResource("ArrayMesh_3d7a8")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport" unique_id=11395002]
transform = Transform3D(-4.3682164e-08, 0.8471683, -0.53132457, -1.5979337e-09, 0.53132457, 0.8471683, 1, 3.7855166e-08, -2.1855687e-08, 1.4354365, 2.055528, -0.24396652)
fov = 40.0

[node name="convert" type="Node3D" parent="." unique_id=1244505279]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6368585, 1.3221542, -0.22803582)

[node name="PismoOpen" type="AudioStreamPlayer3D" parent="convert" unique_id=112592488]
stream = ExtResource("3_a2o52")

[node name="belt" type="Node3D" parent="convert" unique_id=1801579037]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.021868333)

[node name="own_deal" parent="convert/belt" unique_id=912483782 instance=ExtResource("4_vjoqv")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.32991076, 0, -0.74044955)

[node name="own_deal2" parent="convert/belt" unique_id=2103610818 instance=ExtResource("4_vjoqv")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.32991076, 0, -0.2381981)

[node name="own_deal3" parent="convert/belt" unique_id=1844361269 instance=ExtResource("4_vjoqv")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.32991076, 0, 0.26498488)

[node name="own_deal4" parent="convert/belt" unique_id=528557437 instance=ExtResource("4_vjoqv")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.32991076, 0, 0.7679526)

[node name="Label" type="Label" parent="." unique_id=1702662339]
visible = false
layout_mode = 0
offset_left = 265.0
offset_top = 8.0
offset_right = 1136.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 50
text = "LEFT MOUSE BUTTON TO CONTINUE"

[node name="Label3D" type="Label3D" parent="." unique_id=1304431482]
transform = Transform3D(-4.3682164e-08, 0.8471683, -0.53132457, -1.5979337e-09, 0.53132457, 0.8471683, 1, 3.7855187e-08, -2.1855698e-08, 1.9027874, 1.6303533, -0.24396653)
pixel_size = 0.001
alpha_cut = 1
modulate = Color(1, 0, 0, 1)
text = "RED DANGER"
font_size = 60

[node name="exit" type="Button" parent="." unique_id=1021450923]
modulate = Color(0.23392546, 0.23392546, 0.23392543, 1)
layout_mode = 0
offset_left = 1272.0
offset_top = 856.0
offset_right = 1429.0
offset_bottom = 949.0
theme_override_font_sizes/font_size = 60
text = "EXIT
"

[node name="play" type="Button" parent="." unique_id=932970526]
modulate = Color(0.23392546, 0.23392546, 0.23392543, 1)
layout_mode = 0
offset_left = 412.0
offset_top = 388.0
offset_right = 1025.0
offset_bottom = 705.0
theme_override_font_sizes/font_size = 226
text = "PLAY"

[node name="tutorial" type="Button" parent="." unique_id=621242090]
modulate = Color(0.23392546, 0.23392546, 0.23392543, 1)
layout_mode = 0
offset_left = 528.0
offset_top = 784.0
offset_right = 906.0
offset_bottom = 898.0
theme_override_font_sizes/font_size = 77
text = "TUTORIAL"

[node name="swap" type="Timer" parent="." unique_id=300562130]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1937991593]
modulate = Color(0, 0, 0, 1)
position = Vector2(719.75, 479.74997)
scale = Vector2(1440.5, 960.49994)
texture = SubResource("CanvasTexture_a2o52")

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="timeout" from="swap" to="." method="_on_swap_timeout"]
